productos_categoria listo

--- a/system_huellitas/views/public/productos_categoria.html
+++ b/system_huellitas/views/public/productos_categoria.html
@@ -15,15 +15,7 @@
     <header>
         <nav id="navbar"></nav>
         <div class="container-fluid bg-orange-cream-color text-white mt-5 p-3">
-            <div class="row mt-5 ms-5 mb-3">
-                <div class="col-auto">
-                    <img src="../../resources/img/png/cat_products.png" width="90px">
-                </div>
-                <div class="col-auto">
-                    <h1 class="p-3 text-start">
-                        Gatos
-                    </h1>
-                </div>
+            <div class="row mt-5 ms-5 mb-3" id="encabezado">
             </div>
         </div>
     </header>
@@ -38,7 +30,7 @@
                     <div class="col-12">
                         <div class="dropdown d-grid grap-2" id="DropDown_ModificarPed" name="DropDown_ModificarPedN">
                             <select class="form-select shadow" id="selectMarcas" onchange="recargarConteiner('readProductsByMarca')">
-                                <option value="0">Selecciona una marca</option>
+                                
                             </select>
                         </div>
                     </div>
