--- a/system_huellitas/views/public/producto.html
+++ b/system_huellitas/views/public/producto.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Huellitas pets - producto</title>
+    <title id="titulo">Huellitas pets - producto</title>
     <!-- Agregamos una imagen para que se vea en la ventana -->
     <link type="image/png" rel="icon" href="../../resources/img/huellita_logo_without_text.png">
     <!-- Agregamos el framework de boostrap - css -->
@@ -25,105 +25,22 @@
             <div class="row">
                 <!--Aqui ira el código del producto-->
                 <div class="col-12 d-flex align-items-end">
-                    <div class="row">
-                        <!-- Utiliza d-flex y align-items-start para alinear el contenido a la izquierda -->
-                        <div class="col-1 text-end px-0"> <!-- Se ajusta el padding -->
-                            <img src="../../resources/img/png/flecha.png" class="img-fluid">
-                        </div>
-                        <div class="col-11 text-start">
-                            <!-- Utiliza text-start para alinear el texto a la izquierda -->
-                            <a class="opacity-100" href="../public/productos_perros_comida.html"
-                                id="productoEspecifico">
+                    <button class="btn p-0 border-0 shadow-none" onclick="volver()" id="productoEspecifico">
+                        <div class="row">
+                            <div class="col-1 text-end px-0">
+                                <img src="../../resources/img/png/flecha.png" class="img-fluid">
+                            </div>
+                            <div class="col-11 text-start">
                                 <p class="p-0 m-0 text-black font-smallest">
                                     Regresar a los productos
                                 </p>
-                            </a>
+                            </div>
                         </div>
-                    </div>
+                    </button>
                 </div>
                 <!--Aqui ira el contenido de la imagen y la info del producto-->
-                <div class="col-12 align-items-center mt-5">
-                    <div class="row">
-                        <div class="col-sm-12 col-md-12 col-lg-3 px-2 align-items-center mb-6">
-                            <img class="perro image-fluid rounded-3" src="../../resources/img/png/product1.png" alt="">
-                        </div>
-                        <div class="div-sm-12 col-md-12 col-lg-9 py-3">
-                            <!--Aqui esta la información del producto, nombre, marca, precio, descripcion, sección-->
-                            <h2 class="fw-bold"> Bolsa Pedigree- Perro mayor.</h2>
-                            <p class="fs-6 fw-light">PEDIGREE</p>
-                            <h2 class="fw-bold py-2">$20.00</h2>
-                            <p class="fs-5 fw-semibold mb-2">Descripción</p>
-                            <p class="fs-6">Bolsa de comida de 6 libras, pedigree nutre el corazón y el cerebro de
-                                nuestros preciosos, para que lo alimentes como se lo merece.</p>
-                            <div class="bg-orange-color text-light col-12 col-md-3 text-center rounded-3 p-1">
-                                Alimentación</div>
-                        </div>
-                        <!--Aqui estan los divs para ajustar el contenido y que siempre permanezaca con 7 espacios a la derecha en lg-->
-                        <div class="col-lg-2 col-sm-0 col-md-0"></div>
-                        <div class="col-lg-2 col-sm-0 col-md-0"></div>
-                        <div class="col-lg-2 col-sm-0 col-md-0"></div>
-                        <div class="col-lg-1 col-sm-0 col-md-0"></div>
-                        <!--Aqui va la cantidad de unidades que comprará de este producto-->
-                        <div class="row d-flex align-items-center justify-content-end gy-2">
-                            <div class="col-sm-12 col-md-4 col-lg-2 align-items-end">
-                                <div class="contador d-flex justify-content-between rounded-5 shadow">
-                                    <button class="btn mas text-red-color fw-bolder" onclick="restar()">-</button>
-                                    <input type="number" value="1" id="cantidad" min="1"
-                                        class="form-control text-center sin-barra bg-white">
-                                    <button class="btn menos text-red-color fw-bolder" onclick="sumar()">+</button>
-                                </div>
-                            </div>
-                            <!--Boton para añadir el producto al carrito-->
-                            <div class="col-sm-12 col-md-8 col-lg-3 px-2 align-items-start ">
-                                <button class="buton d-flex">
-                                    <a href="../public/carrito_1.html"
-                                        class="btn btn-orange-color text-light me-md-5 d-flex align-items-center py-2 btn-small rounded-3">
+                <div class="col-12 align-items-center mt-5" id="contenedorinformacion">
 
-                                        <div class="col-auto d-none d-sm-block">
-                                            <img src="../../resources/img/svg/carro_redondo.svg" width="40px">
-                                        </div>
-                                        <div class="col-auto">
-                                            Añadir al carrito
-                                        </div>
-                                    </a>
-                                </button>
-                            </div>
-                        </div>
-                        <div class="col-sm-12 col-md-8 col-lg-12 mt-3">
-                            <div class="row align-items-center">
-                                <!-- Agrega la clase align-items-center para alinear verticalmente -->
-                                <div class="col-1 text-end d-none d-sm-block d-md-block">
-                                    <!-- Utiliza las clases d-none y d-sm-block para ocultar la imagen en pantallas pequeñas -->
-                                    <img src="../../resources/img/png/icono_codigo.png" class="imgcodigo img-fluid">
-                                </div>
-                                <div class="col-11 text-start">
-                                    <p class="font-smallest fw-semibold mb-0">
-                                        ¿Tienes un cupón de descuento?
-                                    </p>
-                                    <span class="fst-normal text-black">Podrás añadirlo en la parte de abajo</span>
-                                    <!-- Usa un span para el texto secundario -->
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 py-3 ">
-                            <div class="row align-items-start">
-                                <div class="col-lg-7 col-md-7 col-sm-7">
-                                    <div class="mb-3">
-                                        <input type="text" placeholder="Escribe el código de tu cupón" name="text"
-                                            class="input form-control">
-                                    </div>
-                                </div>
-                                <div class="col-lg-2 col-md-5 col-sm-5 text-start d-flex">
-                                    <button class="buttonn">
-                                        <img src="../../resources/img/png/enviar_codigo.png" class="img-fluid"
-                                            style="max-width: 35px;">
-                                        <!-- Ajusta el tamaño máximo del icono -->
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                        <hr>
-                    </div>
                 </div>
 
 
