--- a/system_huellitas/views/public/productos_categoria.html
+++ b/system_huellitas/views/public/productos_categoria.html
@@ -9,6 +9,7 @@
     <link type="image/png" rel="icon" href="../../resources/img/huellita_logo_without_text.png">
     <!-- Agregamos el framework de boostrap - css -->
     <link type="text/css" rel="stylesheet" href="../../resources/scss/main.css">
+    <link type="text/css" rel="stylesheet" href="../../resources/css/public/productos.css">
 </head>
 
 <body>
