validación que el usuario debe estar logeado para pedir un cupon

--- a/system_huellitas/views/public/producto.html
+++ b/system_huellitas/views/public/producto.html
@@ -182,6 +182,9 @@
     <script src="../../controllers/utils/public.js"></script>
     <!-- Agregamos el js de la página-->
     <script src="../../controllers/public/productos.js"></script>
+    <!-- Agregamos la libreria para alertas -->
+    <script type="text/javascript" src="../../node_modules/sweetalert/dist/sweetalert.min.js"></script>
+    
 </body>
 
 </html>
