Arreglé un poco de diseño ha alguna páginas

--- a/system_huellitas/views/public/productos_categoria.html
+++ b/system_huellitas/views/public/productos_categoria.html
@@ -9,6 +9,8 @@
     <link type="image/png" rel="icon" href="../../resources/img/huellita_logo_without_text.png">
     <!-- Agregamos el framework de boostrap - css -->
     <link type="text/css" rel="stylesheet" href="../../resources/scss/main.css">
+    <!-- Agregamos el archivo css del menu -->
+    <link type="text/css" rel="stylesheet" href="../../resources/css/public/static_components/menu_public.css">
     <link type="text/css" rel="stylesheet" href="../../resources/css/public/productos.css">
 </head>
 
@@ -54,7 +56,7 @@
             </div>
         </div>
         <br>
-        <div class="container bg-white p-5 rounded-5">
+        <div class="ms-5 me-5 mt-3 bg-white p-5 rounded-5">
             <div class="row" id="contenedorPadre">
                 <!-- Aquí iran los productos -->
             </div>
