--- a/system_huellitas/views/public/carrito_1.html
+++ b/system_huellitas/views/public/carrito_1.html
@@ -42,57 +42,9 @@
                 <!-- Primera columna -->
                 <div class="col-sm-12 col-md-8">
                     <!-- Creamos una lista -->
-                    <ul class="list-group">
-                        <!-- Primer tarjeta -->
-                        <li class="list-group-item mb-4 rounded-4 shadow">
-                            <div class="row d-flex align-items-center">
-                                <div class="col-auto">
-                                    <img src="../../resources/img/png/product1.png" width="80px">
-                                </div>
-                                <div class="col">
-                                    <div class="d-flex w-100 justify-content-between">
-                                        <small class="text-body-secondary mt-4">Maxi Chucho</small>
-                                        <button type="button" class="btn-close close" aria-label="Close"></button>
-                                    </div>
-                                    <div class="d-flex w-100 justify-content-between">
-                                        <p class="mb-1 fw-semibold fs-6">Bolsa Maxxi Chucho - Perro adulto</p>
-                                        <p class="fw-bold">$40.50</p>
-                                    </div>
-                                    <div
-                                        class="contador d-flex justify-content-between col-md-2 col-sm-12 rounded-5 shadow mb-3">
-                                        <button class="btn mas text-red-color fw-bolder" onclick="restar()">-</button>
-                                        <input type="number" value="1" id="cantidad" min="1"
-                                            class="form-control text-center sin-barra bg-white">
-                                        <button class="btn menos text-red-color fw-bolder" onclick="sumar()">+</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <!-- Segunda tarjeta -->
-                        <li class="list-group-item mb-4 rounded-4 shadow">
-                            <div class="row d-flex align-items-center">
-                                <div class="col-auto">
-                                    <img src="../../resources/img/png/product1.png" width="80px">
-                                </div>
-                                <div class="col">
-                                    <div class="d-flex w-100 justify-content-between">
-                                        <small class="text-body-secondary mt-4">Maxi Chucho</small>
-                                        <button type="button" class="btn-close close" aria-label="Close"></button>
-                                    </div>
-                                    <div class="d-flex w-100 justify-content-between">
-                                        <p class="mb-1 fw-semibold fs-6">Bolsa Maxxi Chucho - Perro adulto</p>
-                                        <p class="fw-bold">$40.50</p>
-                                    </div>
-                                    <div
-                                        class="contador d-flex justify-content-between col-md-2 col-sm-12 rounded-5 shadow mb-3">
-                                        <button class="btn mas text-red-color fw-bolder" onclick="restar()">-</button>
-                                        <input type="number" value="1" id="cantidad" min="1"
-                                            class="form-control text-center sin-barra bg-white">
-                                        <button class="btn menos text-red-color fw-bolder" onclick="sumar()">+</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
+                    <ul class="list-group" id="cardProducts">
+
+
                     </ul>
                 </div>
                 <!-- Segunda columna -->
@@ -101,8 +53,8 @@
                         <p class="fw-semibold mb-5">Total productos</p>
                         <hr>
                         <div class="d-flex justify-content-between mb-4">
-                            <p class="fw-bold fs-5">Subtotal</p>
-                            <p class="fw-bold fs-5">$100.00</p>
+                            <p class="fw-bold fs-5">Total a pagar</p>
+                            <p class="fw-bold fs-5" id="totalPrice"></p>
                         </div>
                         <a href="../../views/public/carrito_2.html"
                             class="btn btn-orange-color fw-semibold d-grid grap-2 text-light rounded-4">Ir a pagar</a>
