--- a/system_huellitas/views/public/carrito_1.html
+++ b/system_huellitas/views/public/carrito_1.html
@@ -46,6 +46,9 @@
 
 
                     </ul>
+                    <div class="text-center mt-5 d-none" id="anyProducts" >
+                        <h4 class="fw-bold">No hay productos agregados al carrito</h4>
+                    </div>
                 </div>
                 <!-- Segunda columna -->
                 <div class="col-sm-12 col-md-4">
@@ -54,17 +57,19 @@
                         <hr>
                         <div class="d-flex justify-content-between mb-4">
                             <p class="fw-bold fs-5">Total a pagar</p>
-                            <p class="fw-bold fs-5" id="totalPrice"></p>
+                            <p class="fw-bold fs-4" id="totalPrice"></p>
                         </div>
-                        <a href="../../views/public/carrito_2.html"
-                            class="btn btn-orange-color fw-semibold d-grid grap-2 text-light rounded-4">Ir a pagar</a>
+                        <a href="carrito_2.html" class="btn btn-orange-color fw-semibold d-grid grap-2 text-light rounded-4 w-100 btn-lg">Ir a pagar</a>
+                        <div class="text-center mt-3">
+                            <small class="fw-light">Compra 100% segura</small>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="d-flex justify-content-start mt-4 mb-5">
-                <a href="../../views/public/productos_perros_comida.html"><img
+                <a href="../../views/public/categorias.html?mascota=Perros"><img
                         src="../../resources/img/png/row.png"></a>
-                <p class="ms-3 mt-1">Seguir comprando</p>
+                <a class="text-decoration-none text-dark" href="../../views/public/categorias.html?mascota=Perros"><p class="ms-3 mt-1">Seguir comprando</p></a>
             </div>
         </div>
 
