Carrito - segunda pantalla finalizada

--- a/system_huellitas/views/public/carrito_1.html
+++ b/system_huellitas/views/public/carrito_1.html
@@ -59,7 +59,7 @@
                             <p class="fw-bold fs-5">Total a pagar</p>
                             <p class="fw-bold fs-4" id="totalPrice"></p>
                         </div>
-                        <a href="carrito_2.html" class="btn btn-orange-color fw-semibold d-grid grap-2 text-light rounded-4 w-100 btn-lg">Ir a pagar</a>
+                        <button class="btn btn-orange-color fw-semibold d-grid grap-2 text-light rounded-4 w-100 btn-lg" onclick="goToPage()">Ir a pagar</button>
                         <div class="text-center mt-3">
                             <small class="fw-light">Compra 100% segura</small>
                         </div>
