--- a/system_huellitas/views/public/carrito_3.html
+++ b/system_huellitas/views/public/carrito_3.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Huellitas pet's - Carrito</title>
     <!-- Agregamos una imagen para que se vea en la ventana -->
-    <link type="image/png" rel="icon" href="../../resources/img/huellita_logo_without_text.png">
+    <link type="image/png" rel="icon" href="../../resources/img/png/huellita_logo_without_text.png">
     <!-- Agregamos el framework de boostrap - css -->
     <link type="text/css" rel="stylesheet" href="../../resources/scss/main.css">
     <!-- Agregamos su archivo css -->
@@ -19,7 +19,7 @@
 
     <!-- Agregamos nuestro navbar -->
     <header class="p-5 mt-4">
-        <nav id="navbar_perfil"></nav>
+        <nav id="navbar"></nav>
     </header>
 
     <main>
@@ -35,55 +35,11 @@
                     <!-- Primera columna -->
                     <div class="col-md-8 col-sm-12">
                         <div class="mb-5">
-                            <label for="nombre_cliente" class="form-label fw-semibold">Nombre del comprador</label>
-                            <p>Susan Abigail Castillo Oliva</p>
+                            <label for="nameClient" class="form-label fw-semibold">Nombre del comprador</label>
+                            <p id="nameClient"></p>
                         </div>
-                        <p class="fw-semibold">Mis pedidos</p>
-                        <ul class="list-group">
-                            <!-- Primer tarjeta -->
-                            <li class="list-group-item mb-4 rounded-4 shadow">
-                                <div class="row d-flex align-items-center">
-                                    <div class="col-auto">
-                                        <img src="../../resources/img/png/product1.png" width="80px">
-                                    </div>
-                                    <div class="col">
-                                        <div class="d-flex w-100 justify-content-between">
-                                            <small class="text-body-secondary mt-4">Maxi Chucho</small>
-                                        </div>
-                                        <div class="d-flex w-100 justify-content-between">
-                                            <p class="mb-1 fw-semibold fs-6">Bolsa Maxxi Chucho - Perro adulto</p>
-                                            <p class="fw-bold">$40.50</p>
-                                        </div>
-                                        <div
-                                            class="contador d-flex justify-content-between col-md-2 col-sm-12 rounded-5 shadow mb-3">
-                                            <input type="number" value="1" id="cantidad" min="1"
-                                                class="form-control text-center sin-barra bg-white" disabled>
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
-                            <!-- Segunda tarjeta -->
-                            <li class="list-group-item mb-4 rounded-4 shadow">
-                                <div class="row d-flex align-items-center">
-                                    <div class="col-auto">
-                                        <img src="../../resources/img/png/product1.png" width="80px">
-                                    </div>
-                                    <div class="col">
-                                        <div class="d-flex w-100 justify-content-between">
-                                            <small class="text-body-secondary mt-4">Maxi Chucho</small>
-                                        </div>
-                                        <div class="d-flex w-100 justify-content-between">
-                                            <p class="mb-1 fw-semibold fs-6">Bolsa Maxxi Chucho - Perro adulto</p>
-                                            <p class="fw-bold">$40.50</p>
-                                        </div>
-                                        <div
-                                            class="contador d-flex justify-content-between col-md-2 col-sm-12 rounded-5 shadow mb-3">
-                                            <input type="number" value="1" id="cantidad" min="1"
-                                                class="form-control text-center sin-barra bg-white" disabled>
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
+                        <p class="fw-semibold">Mi pedido</p>
+                        <ul class="list-group" id="cardProducts">
                         </ul>
                     </div>
                     <!-- Segunda columna -->
@@ -91,19 +47,19 @@
                         <div class="p-4">
                             <div class="d-flex justify-content-start mb-4">
                                 <img src="../../resources/img/png/calendar.png" width="25px" height="25px">
-                                <p class="fw-bold ms-2">Compra realizada el 14/02/23</p>
+                                <p class="fw-bold ms-2" id="date"></p>
                             </div>
                             <div class="d-flex justify-content-start mb-4">
                                 <img src="../../resources/img/png/price.png" width="25px" height="25px">
-                                <p class="fw-bold ms-2">Total: $100.00</p>
+                                <p class="fw-bold ms-2" id="totalPrice"></p>
                             </div>
                             <div class="bg-green-color fw-semibold d-grid grap-2 shadow rounded-4">
-                                <p class="text-center mt-3">En proceso</p>
+                                <p class="text-center mt-3" id="status"></p>
                             </div>
                             <div class="d-flex justify-content-start mb-4 mt-3">
                                 <img src="../../resources/img/png/info.png" width="25px" height="25px">
-                                <p class="fw-light ms-2 small">Cuando tú pedido este listo se te enviará un correo
-                                    electrónico para que puedas recorgerlo</p>
+                                <p class="fw-light ms-2 small">Se te enviará un correo
+                                    electrónico con la hora y lugar para que puedas recorgerlo</p>
                             </div>
                         </div>
                     </div>
@@ -117,8 +73,12 @@
 
     <!-- Agregamos el framework de boostrap - js -->
     <script type="text/javascript" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Agregamos la libreria para alertas -->
+    <script type="text/javascript" src="../../node_modules/sweetalert/dist/sweetalert.min.js"></script>
+    <script type="text/javascript" src="../../controllers/utils/components.js"></script>
     <!-- Agregamos la ruta para agregar el menu -->
     <script src="../../controllers/utils/public.js"></script>
+    <script type="text/javascript" src="../../controllers/public/carrito_3.js"></script>
 </body>
 
 </html>
