Inicio de valoraciones(ya guarda)

--- a/system_huellitas/views/public/producto.html
+++ b/system_huellitas/views/public/producto.html
@@ -49,7 +49,7 @@
                     <h3 class=""><b>Valoración</b></h3>
                     <br>
                     <!-- Formulario de valoración -->
-                    <form action="" id="valoracion_producto_cliente">
+                    <form action="" id="saveForm">
                         <div class="text-center">
                             <p>Tu puntuación sobre este producto</p>
                             <!-- Estrellas para la valoración -->
@@ -91,13 +91,13 @@
                         <h6><b>Dinos tu opinión acerca del producto</b></h6>
                         <!-- Campo de texto para el comentario -->
                         <div class="input-group py-1">
-                            <textarea class="form-control mensaje_input" id="mensaje_comentario_cliente"
-                                name="mensajeComentarioCliente" rows="5" aria-label="With textarea"
+                            <textarea class="form-control mensaje_input" id="comentarioValoracion"
+                                name="comentarioValoracion" rows="5" aria-label="With textarea"
                                 placeholder="Escribe un comentario..."></textarea>
                         </div>
                         <!-- Botón para enviar el comentario -->
                         <div class="py-4">
-                            <button type="button" class="btn btn-orange-color text-white">Envíar comentario</button>
+                            <button type="submit" class="btn btn-orange-color text-white">Envíar comentario</button>
                         </div>
                     </form>
                 </div>
