Conteo de productos terminado

--- a/system_huellitas/views/public/carrito_2.html
+++ b/system_huellitas/views/public/carrito_2.html
@@ -58,7 +58,7 @@
                                 dirección</label>
                             <div class="d-flex justify-content-evenly">
                                 <input type="text" id="newDireccionCliente" name="direccion"
-                                       class="form-control shadow bg-white me-5">
+                                       class="form-control shadow bg-white me-5" required>
                                 <button type="submit" class="btn btn-red-color text-light btn-sm">Actualizar dirección</button>
                             </div>
                         </div>
