--- a/system_huellitas/views/public/producto.html
+++ b/system_huellitas/views/public/producto.html
@@ -106,67 +106,8 @@
                 <br>
                 <!-- Título de comentarios -->
                 <h5><b>Comentarios</b></h5>
-                <div class="row py-3">
-                    <div class="col-1 py-2">
-                        <img class="image-fluid" width="75px" src="../../resources/img/png/img_pefil_comentario.png"
-                            alt="">
-                    </div>
-                    <!-- Contenedor de comentarios -->
-                    <div class="col-12 col-lg-10 comentarios_clientes">
-                        <div class="row">
-                            <div class="col-9 col-lg-12 py-2 px-4">
-                                <!-- Comentario del usuario -->
-                                <p class="fs-6">La comida le gustó mucho a mi perro, creo que es su favorita, la
-                                    recomiendo
-                                    mucho, espero a sus cachorros les guste tanto como al mio.</p>
-                                <div class="row">
-                                    <!-- Estrellas de la valoración -->
-                                    <div class="col-8 col-lg-8">
-                                        <!-- Estrella 1 -->
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26"
-                                            fill="currentColor" class="bi bi-star-fill estrella_ejemplo"
-                                            viewBox="0 0 16 16">
-                                            <path
-                                                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
-                                        </svg>
-                                        <!-- Estrella 2 -->
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26"
-                                            fill="currentColor" class="bi bi-star-fill estrella_ejemplo"
-                                            viewBox="0 0 16 16">
-                                            <path
-                                                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
-                                        </svg>
-                                        <!-- Estrella 3 -->
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="26" height="28"
-                                            fill="currentColor" class="bi bi-star-fill estrella_ejemplo"
-                                            viewBox="0 0 16 16">
-                                            <path
-                                                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
-                                        </svg>
-                                        <!-- Estrella 4 -->
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26"
-                                            fill="currentColor" class="bi bi-star-fill estrella_ejemplo"
-                                            viewBox="0 0 16 16">
-                                            <path
-                                                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
-                                        </svg>
-                                        <!-- Estrella 5 -->
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26"
-                                            fill="currentColor" class="bi bi-star-fill estrella_ejemplo_apagada"
-                                            viewBox="0 0 16 16">
-                                            <path
-                                                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
-                                        </svg>
-                                    </div>
-                                    <!-- Fecha de publicación del comentario -->
-                                    <div class="col-8 col-lg-4 ">
-                                        <p class="fs-6"><b>Publicado el 10 de enero del 2024</b></p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <div id="comentariosValoraciones"></div>
+                
             </div>
         </div>
     </main>
