--- a/system_huellitas/views/public/producto.html
+++ b/system_huellitas/views/public/producto.html
@@ -25,7 +25,7 @@
             <div class="row">
                 <!--Aqui ira el código del producto-->
                 <div class="col-12 d-flex align-items-end">
-                    <button class="btn p-0 border-0 shadow-none" onclick="volver()" id="productoEspecifico">
+                    <button class="btn p-0 border-0 shadow-none d-none" onclick="volver()" id="productoEspecifico">
                         <div class="row">
                             <div class="col-1 text-end px-0">
                                 <img src="../../resources/img/png/flecha.png" class="img-fluid">
