--- a/system_huellitas/views/public/index.html
+++ b/system_huellitas/views/public/index.html
@@ -97,163 +97,12 @@
             <p>Explora nuestros productos y consciente a tus peluditos</p>
         </div>
 
-        <div class="container-fluid bg-white d-flex justify-content-center rounded-5 p-5">
+        <div class="container-fluid bg-white p-5">
             <!-- Row que contiene cuatro columnas para las cartas de productos -->
-            <div class="row d-flex gy-5 d-flex justify-content-center">
-                <!-- Col 1 -->
-                <div class="col-sm-12 col-md-6 col-lg-3">
-                    <div class="card rounded-4 shadow">
-                        <div class="d-flex justify-content-center align-items-center">
-                            <img src="../../resources/img/png/product3.png" width="250px" height="290px" class="p-3"
-                                alt="...">
-                        </div>
-                        <div class="card-body">
-                            <!-- Row que contiene dos columnas -->
-                            <div class="row">
-                                <!-- Primer columna - Precio del producto -->
-                                <div class="col-7">
-                                    <h5 class="card-title fw-bold">$15</h5>
-                                </div>
-                                <!-- Segundo col - Cinco estrellas -->
-                                <div class="col-5">
-                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
-                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
-                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
-                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
-                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
-                                </div>
-                            </div>
-                            <p class="card-text small fw-light mb-0 mt-1">Maxi Chucho</p>
-                            <p class="fw-bold">Bolsa Maxxi Chucho - Perro adulto</p>
-                            <!-- Row que contiene dos col - Boton para ver el producto y el carrito de compra-->
-                            <div class="row d-flex align-items-center">
-                                <div class="col-8">
-                                    <a href="../../views/public/producto.html" class="btn btn-orange-color text-light">
-                                        Ver producto</a>
-                                </div>
-                                <div class="col-4">
-                                    <a href="../../views/public/carrito_1.html">
-                                        <img src="../../resources/img/png/carrito_naranja.png" class="float-end"
-                                            width="35px">
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Segunda col -->
-                <div class="col-sm-12 col-md-6 col-lg-3">
-                    <div class="card rounded-4 shadow">
-                        <div class="d-flex justify-content-center align-items-center">
-                            <img src="../../resources/img/png/product3.png" width="250px" height="290px" class="p-3"
-                                alt="...">
-                        </div>
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-7">
-                                    <h5 class="card-title fw-bold">$15</h5>
-                                </div>
-                                <div class="col-5">
-                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
-                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
-                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
-                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
-                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
-                                </div>
-                            </div>
-                            <p class="card-text small fw-light mb-0 mt-1">Maxi Chucho</p>
-                            <p class="fw-bold">Bolsa Maxxi Chucho - Perro adulto</p>
-                            <div class="row d-flex align-items-center">
-                                <div class="col-8">
-                                    <a href="../../views/public/producto.html" class="btn btn-orange-color text-light">
-                                        Ver producto</a>
-                                </div>
-                                <div class="col-4">
-                                    <a href="../../views/public/carrito_1.html">
-                                        <img src="../../resources/img/png/carrito_naranja.png" class="float-end"
-                                            width="35px">
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Tercera col -->
-                <div class="col-sm-12 col-md-6 col-lg-3">
-                    <div class="card rounded-4 shadow">
-                        <div class="d-flex justify-content-center align-items-center">
-                            <img src="../../resources/img/png/product3.png" width="250px" height="290px" class="p-3"
-                                alt="...">
-                        </div>
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-7">
-                                    <h5 class="card-title fw-bold">$15</h5>
-                                </div>
-                                <div class="col-5">
-                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
-                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
-                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
-                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
-                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
-                                </div>
-                            </div>
-                            <p class="card-text small fw-light mb-0 mt-1">Maxi Chucho</p>
-                            <p class="fw-bold">Bolsa Maxxi Chucho - Perro adulto</p>
-                            <div class="row d-flex align-items-center">
-                                <div class="col-8">
-                                    <a href="../../views/public/producto.html" class="btn btn-orange-color text-light">
-                                        Ver producto</a>
-                                </div>
-                                <div class="col-4">
-                                    <a href="../../views/public/carrito_1.html">
-                                        <img src="../../resources/img/png/carrito_naranja.png" class="float-end"
-                                            width="35px">
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Cuarta col -->
-                <div class="col-sm-12 col-md-6 col-lg-3">
-                    <div class="card rounded-4 shadow">
-                        <div class="d-flex justify-content-center align-items-center">
-                            <img src="../../resources/img/png/product3.png" width="250px" height="290px" class="p-3"
-                                alt="...">
-                        </div>
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-7">
-                                    <h5 class="card-title fw-bold">$15</h5>
-                                </div>
-                                <div class="col-5">
-                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
-                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
-                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
-                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
-                                    <img src="../../resources/img/png/start_on.png" width="14px" height="14px">
-                                </div>
-                            </div>
-                            <p class="card-text small fw-light mb-0 mt-1">Maxi Chucho</p>
-                            <p class="fw-bold">Bolsa Maxxi Chucho - Perro adulto</p>
-                            <div class="row d-flex align-items-center">
-                                <div class="col-8">
-                                    <a href="../../views/public/producto.html" class="btn btn-orange-color text-light">
-                                        Ver producto</a>
-                                </div>
-                                <div class="col-4">
-                                    <a href="../../views/public/carrito_1.html">
-                                        <img src="../../resources/img/png/carrito_naranja.png" class="float-end"
-                                            width="35px">
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div class="row d-flex justify-content-center" id="contenedorPadre">
+
+
             </div>
-        </div>
         </div>
 
 
